correction border radius collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -25,6 +25,7 @@
     .writing-txt, .list-text {
     background: rgba(246, 246, 246, 1);
     padding: 1.5em 1em 1em 1em;
+    border-radius: 10px;
     }
 }
 }
