--- a/src/pages/HousingPage/HousingPage.scss
+++ b/src/pages/HousingPage/HousingPage.scss
@@ -50,7 +50,7 @@
 //media queries
 @media (width >= 769px) {
     .housing-page {
-        margin-bottom: 10%;
+        margin-bottom: 8%;
         .lower-card-text {
              h2 {
         font-size: 1.8em;
